src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Answer Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>BLN Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ANS-{000000}</displayFormat>
        <label>Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>